# AzusaUploaderToolbox

./: README.md  pyproject.toml
azusauploadertoolbox/: dir.py
azusauploadertoolbox/api/: BaseApi.py  base.py  youtube.py
